<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MonPokemon" >

    <Button
        android:id="@+id/goMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="14dp"
        android:layout_marginRight="29dp"
        android:text="Retourner" />

    <TextView
        android:id="@+id/expPoke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pointsAttaquePokemon"
        android:layout_below="@+id/levelPokemon"
        android:text="@string/setExpPoke"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/pointsDefensePokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/levelPokemon"
        android:layout_alignLeft="@+id/pointsAttaquePokemon"
        android:text="@string/defPokemon"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/levelPokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/expPoke"
        android:layout_centerVertical="true"
        android:text="@string/setLvlPoke"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/imagePokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/viePokemon"
        android:layout_marginLeft="42dp"
        android:src="@drawable/blastoise" />

    <TextView
        android:id="@+id/monPokemonNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imagePokemon"
        android:layout_centerHorizontal="true"
        android:text="NomPok"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/viePokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pointsAttaquePokemon"
        android:layout_toRightOf="@+id/monPokemonNom"
        android:text="@string/setViePoke"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/pointsAttaquePokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pointsDefensePokemon"
        android:layout_alignLeft="@+id/viePokemon"
        android:text="@string/attaquePokemon"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/enigmes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/expPoke"
        android:layout_below="@+id/expPoke"
        android:text="@string/enig"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/oldPok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/goMap"
        android:layout_alignBottom="@+id/goMap"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:text="Go back to old Pokemon" />

</RelativeLayout>